--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "axios": "^0.5.4",
     "fluxette": "^0.16.0",
     "mdl-react": "0.0.24",
-    "react": "^0.13.3",
-    "react-router": "^1.0.0-beta3"
+    "react": "~0.13.3",
+    "react-router": "~0.13.3"
   }
 }
